--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.0
+expecttest==0.3.0
 fastjsonschema==2.21.1
 filelock==3.17.0
 fonttools==4.56.0
@@ -111,6 +112,7 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 sympy==1.13.1
+tabulate==0.9.0
 terminado==0.18.1
 tinycss2==1.4.0
 torch==2.6.0
