--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 figures.ipynb filter=lfs diff=lfs merge=lfs -text
 results/* filter=lfs diff=lfs merge=lfs -text
+figures[[:space:]]copy.ipynb filter=lfs diff=lfs merge=lfs -text
